--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": ["./assets/**/*"],
     "ios": {
       "supportsTablet": true,
       "buildNumber": "1.0.0"
